fix nav overflow

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -26,7 +26,7 @@ nav {
   text-align: center;
 
   ul {
-    max-width: 100vw;
+    max-width: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
